--- a/driver-app/.env
+++ b/driver-app/.env
@@ -1,11 +1,11 @@
-CHANNELS_APP_KEY="YOUR CHANNELS APP KEY"
-CHANNELS_APP_CLUSTER="YOUR CHANNELS APP CLUSTER"
+CHANNELS_APP_KEY="978265"
+CHANNELS_APP_CLUSTER="us2"
 
 CHATKIT_INSTANCE_LOCATOR_ID="YOUR CHATKIT INSTANCE LOCATOR ID"
 CHATKIT_SECRET_KEY="YOUR CHATKIT SECRET KEY"
 CHATKIT_TOKEN_PROVIDER_ENDPOINT="YOUR CHATKIT TOKEN PROVIDER ENDPOINT"
 
-GOOGLE_API_KEY="YOUR GOOGLE API KEY"
+GOOGLE_API_KEY="AIzaSyCJo5I-bkjdTnI1QAMBrUA9Iuy15dDTUt8"
 
 NGROK_HTTPS_URL="YOUR NGROK HTTPS URL"
 
