--- a/ordering-app/.env
+++ b/ordering-app/.env
@@ -8,4 +8,4 @@ CHATKIT_INSTANCE_LOCATOR_ID="YOUR CHATKIT INSTANCE LOCATOR ID"
 CHATKIT_SECRET_KEY="YOUR CHATKIT SECRET KEY"
 CHATKIT_TOKEN_PROVIDER_ENDPOINT="YOUR CHATKIT TOKEN PROVIDER ENDPOINT"
 
-BEAMS_INSTANCE_ID="YOUR ORDERING APP BEAMS INSTANCE ID"
+BEAMS_INSTANCE_ID="ff393b60-8fe5-4472-adf5-ccb25db7d1ff"
