--- a/driver-app/.env
+++ b/driver-app/.env
@@ -9,4 +9,4 @@ GOOGLE_API_KEY="AIzaSyCJo5I-bkjdTnI1QAMBrUA9Iuy15dDTUt8"
 
 NGROK_HTTPS_URL="YOUR NGROK HTTPS URL"
 
-BEAMS_INSTANCE_ID="YOUR DRIVER APP BEAMS INSTANCE ID"
+BEAMS_INSTANCE_ID="cde19c7c-2cdc-4aa0-8e7e-5eb69f5b80ac"
